--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_with model:@user,url:user_registration_path,local:true do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
@@ -10,7 +10,7 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email,autocomplete:"email" %>
   </div>
 
   <div class="field">
@@ -31,4 +31,6 @@
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= render "user_path" %>
+
+<!--ユーザーのプロフィール画面に遷移したい-->
