[Add]users_page

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,7 +7,7 @@
 <div>
  <%= @book.user.name %>
  <%= @book.title %>
- <%= @book.opinion %>
+ <%= @book.body %>
 </div>
 
 <%= link_to "edit", edit_book_path(@book.id) %>
