--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,6 +11,6 @@
  <div>
     <!--user_profile_image-->
     <p>title:<%= book.title %></p>
-    <p>opinion:<%= book.opinion %></p>
+    <p>opinion:<%= book.body %></p>
  </div>
 <% end %>
