--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -4,7 +4,7 @@
   <h4>title</h4>
    <%= f.text_field:title %>
   <h4>Opinion</h4>
-   <%= f.text_area :opinion %>
+   <%= f.text_area :body %>
   <%= f.submit  'Create Book' %>
  <% end %>
 
