--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,7 @@
 <div class="user_info">
-  
+ <h3>User info</h3>
+  <%= image_tag user.get_profile_image("100x100") %>
+  <p>name<%= user.name %></p>
+  <p>introduction<%= user.introduction %></p>
+  <%= link_to "edit",edit_user_path(@user.id) %>
 </div>
