--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,6 +1,6 @@
 
 <h3>New Book</h3>
- <%= form_with model:books,local:true do |f| %>
+ <%= form_with model:book,local:true do |f| %>
   <h4>title</h4>
    <%= f.text_field:title %>
   <h4>Opinion</h4>
