--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,16 +1,30 @@
-<h1>Editing Book</h1>
 
-<%= form_with model:@book, local:true do |f| %>
 
- <h4>title</h4>
- <%= f.text_field :title %>
 
- <h4>opinion</h4>
- <%= f.text_area :body %>
+<div class="container">
+ <div class="row">
+  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+   <h2>Editind Book</h2>
+   <%= form_with model:@book, local:true do |f| %>
+    <label for="inputName">Title</label>
+     <%= f.text_field :title %>
+     <label>opinion</label>
+     <%= f.text_area :body %>
+     <%= f.submit "Update User" %>
+   <% end %>
+  </div>
+ </div>
+</div>
 
- <%= f.submit 'Update Book' %>
 
-<% end %>
+
+
+
+
+
+
+
+
 
 <%= link_to "show", book_path(@book.id) %>
 |
