--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,17 +1,22 @@
-<p>（メモ）Book detail １投稿詳細</p>
 
+
+<%= flash[:notice] %>
 <%= render 'users/user', user:@user %>
-<%= render 'list', books:@new_book %>
+<%= render 'books/list', book:@new_book %>
 
-<h2>Book detail</h2>
-<div>
- <%= @book.user.name %>
- <%= @book.title %>
- <%= @book.body %>
+<div class="col-md-8 offset-md-1">
+ <h2>Book detail</h2>
+ <table class="table table-hover table-inverse">
+  <tbody>
+   <tr>
+    <td><%= image_tag @book.user.profile_image %></td>
+    <td><%= book.title %></td>
+    <td><%= book.body %></td>
+    <% if @book.user == current_user %>
+    <td> <%= link_to "edit", edit_book_path(@book.id) %></td>
+    <td><%= link_to "destroy", book_path(@book),method: :delete,"date-confirm" => "Are you sure?"  %></td>
+    <% end %>
+   </tr>
+  </tbody>
+ </table>
 </div>
-
-<% if @book.user == current_user %>
- <%= link_to "edit", edit_book_path(@book.id) %>
- <%= link_to "destroy", book_path(@book),method: :delete, "date-confirm" => "Are you sure?"  %>
-<% end %>
-
