--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
        <li>
          <%= link_to "Log_in",new_user_session_path %>
        </li>
+       <li>
+         <%= link_to "About",about_path %>
+       </li>
       <% end %>
     </header>
 
