--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,25 @@
 <h2>User Info</h2>
-<%= form_with model:@user, local:true do |f| %>
- <label for="inputName">Name</label>
- <%= f.text_field :name %>
- <label>Introduction</label>
- <%= f.text_area :introduction %>
- <%= f.submit "Update User" %>
+
+<% if @user.errors.any? %>
+ <%= @user.errors.count %>件のerrorが発生しました
+ <ul>
+  <% @user.errors.full_messages.each do |message| %>
+   <li><%= message %></li>
+  <% end %>
+ </ul>
 <% end %>
+
+<div class="container">
+ <div class="row">
+  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+   <h2>User info</h2>
+   <%= form_with model:@user, local:true do |f| %>
+    <label for="inputName">Name</label>
+     <%= f.text_field :name %>
+     <label>Introduction</label>
+     <%= f.text_area :introduction %>
+     <%= f.submit "Update User" %>
+   <% end %>
+  </div>
+ </div>
+</div>
