--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,27 @@
-<p>（メモ）1ユーザーの全投稿.ログイン後遷移先</p>
 
 <%= render 'user', user:@user %>
 <%= render 'books/list', books:@new_book %>
 
-<h2>Books</h2>
-<h4>title</h4>
-<h4>opinion</h4>
+<div class="col-md-8 offset-md-1">
+ <h2>Books</h2>
+ <table class="table table-hover table-inverse">
+  <thead>
+   <tr>
+    <th></th>
+    <th>Title</th>
+    <th>Opinion</th>
+    <th colspan="3"></th>
+   </tr>
+  </thead>
+  <tbody>
+   <tr>
+    <% @books.each do |book| %>
+    <td><%= image_tag book.user.get_profile_image %></td>
+    <td><%= book.title %></td>
+    <td><%= book.body %></td>
+   <% end %>
+   </tr>
+  </tbody>
+ </table>
+</div>
 
-<% @books.each do |book| %>
- <div>
-    <!--user_profile_image-->
-    <p>title:<%= book.title %></p>
-    <p>opinion:<%= book.body %></p>
- </div>
-<% end %>
