--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,7 +12,7 @@
 <% end %>
 
 <%= render 'users/user', user:@user %>
-<%= render 'books/list', book:@book %>
+<%= render 'books/list', book:@new_book %>
 
 <div class="col-md-8 offset-md-1">
  <h2>Books</h2>
