--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,9 +9,9 @@
  <table class="table table-hover table-inverse">
   <tbody>
    <tr>
-    <td><%= image_tag book.user.get_profile_image("40x40") %></td>
-    <td><%= book.title %></td>
-    <td><%= book.body %></td>
+    <td><%= image_tag @book.user.get_profile_image("40x40") %></td>
+    <td><%= @book.title %></td>
+    <td><%= @book.body %></td>
     <% if @book.user == current_user %>
     <td> <%= link_to "edit", edit_book_path(@book.id) %></td>
     <td><%= link_to "destroy", book_path(@book),method: :delete,"date-confirm" => "Are you sure?"  %></td>
