--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 
 
 <%= render 'user', user:@user %>
-<%= render 'books/list', books:@book %>
+<%= render 'books/list', book:@new_book %>
 
 
 <div class="col-md-8 offdet-md-1">
