--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 
 <%= render 'user', user:@user %>
-<%= render 'books/list', books:@new_book %>
+<%= render 'books/list', book:@new_book %>
 
 <div class="col-md-8 offset-md-1">
  <h2>Books</h2>
@@ -16,7 +16,7 @@
   <tbody>
    <tr>
     <% @books.each do |book| %>
-    <td><%= image_tag book.user.get_profile_image %></td>
+    <td><%= image_tag book.user.get_profile_image("40x40") %></td>
     <td><%= book.title %></td>
     <td><%= book.body %></td>
    <% end %>
