[Add]profile_image

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -7,6 +7,7 @@
 
    <table class="table">
     <tbody>
+     <tr><%= image_tag user.get_profile_image("40x40") %></tr>
      <tr>name<%= user.name %></tr>
      <tr>introduction<%= user.introduction %></tr>
     </tbody>
