--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,10 +1,15 @@
 
-<h3>New Book</h3>
- <%= form_with model:book,local:true do |f| %>
-  <h4>title</h4>
-   <%= f.text_field:title %>
-  <h4>Opinion</h4>
-   <%= f.text_area :body %>
-  <%= f.submit  'Create Book' %>
- <% end %>
-
+   <h2>New Book</h2>
+   <%= form_with model:book,local:true do |f| %>
+   <div class="form-group">
+    <label for="book_title">Title</label>
+    <%= f.text_field:title %>
+   </div>
+   <div class="form-group">
+    <label for="book_opinion">Opinion</label>
+    <%= f.text_area :body %>
+   </div>
+   <div class="form-group">
+    <%= f.submit  'Create Book',class:"btn-success" %>
+   </div>
+   <% end %>
