--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,13 +4,19 @@
 <div class="container">
  <div class="row">
   <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-   <h2>Editind Book</h2>
+   <h1>Editind Book</h1>
    <%= form_with model:@book, local:true do |f| %>
-    <label for="inputName">Title</label>
-     <%= f.text_field :title %>
-     <label>opinion</label>
-     <%= f.text_area :body %>
-     <%= f.submit "Update User" %>
+    <div class="form-group">
+     <label for="inputName">Title</label>
+      <%= f.text_field :title %>
+    </div>
+    <div class="form-group">
+      <label>opinion</label>
+      <%= f.text_area :body %>
+    </div>
+    <div class="form-group">
+      <%= f.submit "Update User", class:"btn btn-success" %>
+    </div>
    <% end %>
   </div>
  </div>
