--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,5 @@
-<%= flash.each do |key,value| %>
- <%= content_tag(:div, value, class:"#{key}") %>
-<% end %>
+<main>
+<p class="notice"><%= flash[:notice] %></p>
 
 <% if @book.errors.any? %>
  <%= @book.errors.count %>件のerrorが発生しました。
@@ -11,29 +10,38 @@
  </ul>
 <% end %>
 
-<%= render 'users/user', user:@user %>
-<%= render 'books/list', book:@new_book %>
 
-<div class="col-md-8 offset-md-1">
- <h2>Books</h2>
- <table class="table table-hover table-inverse">
-  <thead>
-   <tr>
-    <th></th>
-    <th>Title</th>
-    <th>Opinion</th>
-    <th colspan="3"></th>
-   </tr>
-  </thead>
-  <tbody>
-   <tr>
+<div class="container">
+ <div class="row">
+  <div class="col-md-3">
+   <%= render 'users/user', user:@user %>
+   <%= render 'books/list', book:@new_book %>
+  </div>
+  <div class="col-md-8 offset-md-1">
+   <h2>Books</h2>
+   <table class="table table-hover table-inverse">
+   <thead>
+    <tr>
+     <th></th>
+     <th>Title</th>
+     <th>Opinion</th>
+     <th colspan="3"></th>
+    </tr>
+   </thead>
+   <tbody>
     <% @books.each do |book| %>
-    <td><%= image_tag book.user.get_profile_image("40x40") %></td>
-    <td><%= book.title %></td>
-    <td><%= book.body %></td>
-    <% end %>
-   </tr>
-  </tbody>
- </table>
+    <tr>
 
+     <td><%= image_tag book.user.get_profile_image("40x40") %></td>
+     <td><%= link_to book.title, book_path(book.id) %></td>
+     <td><%= book.body %></td>
+
+    </tr>
+    <% end %>
+   </tbody>
+   </table>
+  </div>
+
+ </div>
 </div>
+</main>
