--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,22 +1,29 @@
+<p class="notice"><%= flash[:notice] %></p>
 
+<div class="container">
+ <div class="row">
 
-<%= flash[:notice] %>
-<%= render 'users/user', user:@user %>
-<%= render 'books/list', book:@new_book %>
+  <div class="col-md-3">
+  <%= render 'users/user', user:@user %>
+  <%= render 'books/list', book:@new_book %>
+  </div>
+  <div class="col-md-8">
+   <h2>Book detail</h2>
+   <table class="table table-hover table-inverse">
+    <tbody>
+     <tr>
+      <td><%= image_tag @book.user.get_profile_image("40x40") %></td>
+      <td><%= link_to @user.name, user_path(@user) %></td>
+      <td><%= @book.title %></td>
+      <td><%= @book.body %></td>
+      <% if @book.user == current_user %>
+       <td> <%= link_to "edit", edit_book_path(@book.id),class:"btn btn-success" %></td>
+       <td><%= link_to "destroy", book_path(@book),method: :delete,class:"btn-danger","date-confirm" => "Are you sure?"  %></td>
+      <% end %>
+     </tr>
+    </tbody>
+   </table>
+  </div>
 
-<div class="col-md-8 offset-md-1">
- <h2>Book detail</h2>
- <table class="table table-hover table-inverse">
-  <tbody>
-   <tr>
-    <td><%= image_tag @book.user.get_profile_image("40x40") %></td>
-    <td><%= @book.title %></td>
-    <td><%= @book.body %></td>
-    <% if @book.user == current_user %>
-    <td> <%= link_to "edit", edit_book_path(@book.id) %></td>
-    <td><%= link_to "destroy", book_path(@book),method: :delete,"date-confirm" => "Are you sure?"  %></td>
-    <% end %>
-   </tr>
-  </tbody>
- </table>
+ </div>
 </div>
