--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,10 +27,10 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up",class:"btn-success" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
 
-<!--ユーザーのプロフィール画面に遷移したい-->
+<
