--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,17 +1,31 @@
-<h1>welcome to Bookers!!</h1>
+<p class="notice"><%= flash[:notice] %></p>
 
-
-<%= flash.each do |key,value| %>
- <%= content_tag(:div, value, class:"#{key}") %>
-<% end %>
-
-
-<p>In Bookers,</p>
-
-<p>
-  you can share and exchange your opinions, inpressions, and emotions<br>
-  about various books!
-</p>
-
-<%= link_to "Log in",new_user_session_path %>
-<%= link_to "Sign up",new_user_registration_path %>
+<div class="container">
+ <div class="row">
+  <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+   <h1>
+     welcome to
+     <i class="fas fa-book"></i>
+     <strong>Bookers!!</strong>
+   </h1>
+   <p>
+     in
+     <i class="fas fa-book"></i>
+     <strong>Bookers</strong>
+     ,
+   </p>
+   <p>
+    you can share and exchange your opinions, inpressions, and emotions<br>
+    about various books!
+   </p>
+   <div class="container">
+    <div class="row">
+     <%= link_to "Log in",new_user_session_path,class:"btn btn-primary btn-block" %>
+    </div>
+    <div class="row">
+     <%= link_to "Sign up",new_user_registration_path,class:"btn btn-success btn-block" %>
+    </div>
+   </div>
+  </div>
+ </div>
+</div>
