--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,39 +1,75 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://kit.fontawesome.com/8fe05c33f7.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Bookers2</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+   <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+　<body>
     <header>
-      <% if user_signed_in? %>
-       <li>
-         <%= link_to "Log_out",destroy_user_session_path, method: :delete %>
-       </li>
-      <% else %>
-       <li>
-         <%= link_to "Sign_up", new_user_registration_path %>
-       </li>
-       <li>
-         <%= link_to "Log_in",new_user_session_path %>
-       </li>
-       <li>
-         <%= link_to "About",about_path %>
-       </li>
-      <% end %>
-    </header>
+      <nav class="navbar navbar-expand-lg navbar-dsrk bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="/">
+            <span>Bookers</span>
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
 
-    <footer>
-      <div class="container mt-5">
-        <div class="row">CopyRight Infratop.inc</div>
-      </div>
-    </footer>
+              <% if user_signed_in? %>
+              <i class="fas fa-home"></i>
+              <li>
+                <%= link_to "Home",user_path(current_user) %>
+              </li>
+              <i class="fas fa-users"></i>
+               <li>
+                <%= link_to "Users",users_path %>
+               </li>
+               <i class="far fa-book-open"></i>
+               <li>
+                <%= link_to"Books",books_path %>
+               </li>
+               <i class="fas fa-sign-out-alt"></i>
+               <li>
+                <%= link_to "Log_out",destroy_user_session_path, method: :delete %>
+               </li>
+              <% else %>
+              <i class="fas fa-home"></i>
+              <li>
+                <%= link_to "Home", root_path %>
+              </li>
+              <i class="fas fa-sign-in-alt"></i>
+               <li>
+                <%= link_to "Log_in",new_user_session_path %>
+               </li>
+               <i class="fas fa-link"></i>
+               <li>
+                <%= link_to "About",about_path %>
+               </li>
+               <i class="fas fa-user-plus"></i>
+               <li>
+                <%= link_to "Sign_up", new_user_registration_path %>
+               </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+   </header>
+
     <%= yield %>
+    <footer>
+     <p>CopyRight Infratop.inc</p>
+    </footer>
+
   </body>
 </html>
