--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,23 +1,24 @@
-<div class="container px-5 px-sm-0">
- <div class="row">
-  <div class="col-md-3">
 
    <h2>User info</h2>
-  <%#= image_tag book.user.get_profile_image("100x100") %>
+     <table class="table">
+      <tbody>
+       <tr> <%= image_tag user.get_profile_image("40x40") %></tr>
+       <tr></tr>
+       <tr>
+        <th>name</th>
+        <th><%= user.name %></th>
+       </tr>
+       <tr>
+        <th>introduction</th>
+        <th><%= user.introduction %></th>
+       </tr>
+      </tbody>
+     </table>
 
-   <table class="table">
-    <tbody>
-     <tr><%= image_tag user.get_profile_image("40x40") %></tr>
-     <tr>name<%= user.name %></tr>
-     <tr>introduction<%= user.introduction %></tr>
-    </tbody>
-   </table>
-
-   <div class="row">
-    <% if user==current_user %>
-     <%= link_to "edit",edit_user_path(user.id) %>
+   <% if user==current_user %>
+    <%= link_to edit_user_path(user) do %>
+    <button type="button" class="btn btn-outline-secondary btn-block">
+     <i class="fas fa-user-cog" ></i>
+    </button>
     <% end %>
-   </div>
-  </div>
- </div>
-</div>
+   <% end %>
