--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,32 +1,37 @@
 
 
-<%= render 'user', user:@user %>
-<%= render 'books/list', book:@new_book %>
 
 
-<div class="col-md-8 offdet-md-1">
- <h2>Users</h2>
- <table class="table table-hover table-inverse">
-  <thead>
-   <tr>
-    <th></th>
-    <th>Image</th>
-    <th>name</th>
-    <th colspan="3"></th>
-   </tr>
-  </thead>
-  <tbody>
-   <tr>
-   <% @users.each do |user| %>
-    <td><%= image_tag user.get_profile_image("40x40") %></td>
-    <td><%= user.name %></td>
-    <td><%= link_to "show", user_path(@user.id) %></td>
-   <% end %>
-   </tr>
-  </tbody>
- </table>
+<div class="container">
+ <div class="row">
+  <div class="col-md-3">
+   <%= render 'user', user:@user %>
+   <%= render 'books/list', book:@new_book %>
+  </div>
+  <div class="col-md-8 offset-md-1">
+  <h2>Users</h2>
+   <table class="table table-hover table-inverse">
+    <thead>
+     <tr>
+      <th></th>
+      <th>Image</th>
+      <th>name</th>
+      <th colspan="3"></th>
+     </tr>
+   </thead>
+    <tbody>
+     <% @users.each do |user| %>
+     <tr>
+      <td><%= image_tag user.get_profile_image("40x40") %></td>
+      <td><%= user.name %></td>
+      <td><%= link_to "show", "/users/#{user.id}" %></td>
+     </tr>
+    <% end %>
+   </tbody>
+   </table>
+  </div>
+ </div>
 </div>
-
 
 
 
