--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,35 @@
-
-<%= render 'user', user:@user %>
-<%= render 'books/list', book:@new_book %>
-
-<div class="col-md-8 offset-md-1">
- <h2>Books</h2>
- <table class="table table-hover table-inverse">
-  <thead>
-   <tr>
-    <th></th>
-    <th>Title</th>
-    <th>Opinion</th>
-    <th colspan="3"></th>
-   </tr>
-  </thead>
-  <tbody>
-   <tr>
-    <% @books.each do |book| %>
-    <td><%= image_tag book.user.get_profile_image("40x40") %></td>
-    <td><%= book.title %></td>
-    <td><%= book.body %></td>
-   <% end %>
-   </tr>
-  </tbody>
- </table>
+<p class="notice"><%= flash[:notice] %></p>
+<div class="container">
+ <div class="row">
+  <div class="col-md-3">
+   <%= render 'user', user:@user %>
+   <%= render 'books/list', book:@new_book %>
+  </div>
+  <div class="col-md-8 offset-md-1">
+   <h2>Books</h2>
+   <table class="table table-hover table-inverse">
+    <thead>
+     <tr>
+      <th></th>
+      <th>Title</th>
+      <th>Opinion</th>
+      <th colspan="3"></th>
+     </tr>
+    </thead>
+    <tbody>
+     <% @books.each do |book| %>
+     <tr>
+      <td><%= image_tag book.user.get_profile_image("40x40") %></td>
+      <td>
+       <%=link_to book.title, book_path(book.id) %>
+      </td>
+      <td><%= book.body %></td>
+     </tr>
+     <% end %>
+    </tbody>
+   </table>
 </div>
+ </div>
+</div>
+
 
