--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,21 +1,23 @@
+   <% if @book.errors.any? %>
+    <%# binding.pry %>
+    <%= @book.errors.count %>errors prohibited this obj from being saved:
+    <ul>
+     <% @book.errors.full_messages.each do |message| %>
+     <li><%= message %></li>
+     <% end %>
+    </ul>
+   <% end %>
 <main>
 <p class="notice"><%= flash[:notice] %></p>
 
-<% if @book.errors.any? %>
- <%= @book.errors.count %>件のerrorが発生しました。
- <ul>
-  <% @book.errors.full_messages.each do |message| %>
-   <li><%= message %></li>
-  <% end %>
- </ul>
-<% end %>
+
 
 
 <div class="container">
  <div class="row">
   <div class="col-md-3">
    <%= render 'users/user', user:@user %>
-   <%= render 'books/list', book:@new_book %>
+   <%= render 'books/list', book: @book %>
   </div>
   <div class="col-md-8 offset-md-1">
    <h2>Books</h2>
